@@ -1,3 +1,8 @@
+Thu Nov  5 13:46:34 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/OS_NS_stdlib.h:
+          Fix for platforms that lack strtoll or strtoull.
+
 Thu Nov  5 11:56:13 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/OS_NS_stdlib.h:
